datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}


generator dbml {
  provider = "prisma-dbml-generator"
}

model Usuario {
  id         Int        @id @default(autoincrement())
  cnpj       String     @unique
  email      String     @unique
  senha      String     @map("password")
  telefone   String?

  ong        ONG?
  empresa    Empresa?
  prefeitura Prefeitura?
}

model ONG {
  id             Int       @id @default(autoincrement())
  ods            String?
  nome            String 

  usuarioId      Int       @unique
  usuario        Usuario   @relation(fields: [usuarioId], references: [id])

  apoiosRecebidos Apoio[]
}

model Empresa {
  id         Int       @id @default(autoincrement())
  nome       String
  
  usuarioId  Int       @unique
  usuario    Usuario   @relation(fields: [usuarioId], references: [id])

  apoios     Apoio[]
  pontos     Int       @default(0)
  criterios  Criterio[]
}

model Prefeitura {
  id         Int       @id @default(autoincrement())
  nome       String
  usuarioId  Int       @unique
  usuario    Usuario   @relation(fields: [usuarioId], references: [id])

  apoios     Apoio[]
}

model Apoio {
  id           Int        @id @default(autoincrement())
  data         DateTime
  valor        Float
  tipoAjuda    String
  documentacao String
  
  empresaId    Int
  ongId        Int
  prefeituraId Int?

  empresa      Empresa    @relation(fields: [empresaId], references: [id])
  ong          ONG        @relation(fields: [ongId], references: [id])
  prefeitura   Prefeitura? @relation(fields: [prefeituraId], references: [id])
}

model Criterio {
  id         Int      @id @default(autoincrement())
  tipo       String
  pontuacao  Int

  empresaId  Int
  seloId     Int

  empresa    Empresa  @relation(fields: [empresaId], references: [id])
  selo       Selo     @relation(fields: [seloId], references: [id])
}

model Selo {
  id         Int        @id @default(autoincrement())
  tipo       String
  tier       String

  criterios  Criterio[]
}

model File {
  id         String   @id @default(uuid())
  storedName String
  mimetype   String
  size       Int
  path       String
  status     String
  createdAt  DateTime @default(now())
}