//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Usuario {
  id Int [pk, increment]
  cnpj String [unique, not null]
  email String [unique, not null]
  senha String [not null]
  telefone String
  ong ONG
  empresa Empresa
  prefeitura Prefeitura
}

Table ONG {
  id Int [pk, increment]
  ods String
  nome String [not null]
  usuarioId Int [unique, not null]
  usuario Usuario [not null]
  apoiosRecebidos Apoio [not null]
}

Table Empresa {
  id Int [pk, increment]
  nome String [not null]
  usuarioId Int [unique, not null]
  usuario Usuario [not null]
  apoios Apoio [not null]
  pontos Int [not null, default: 0]
  criterios Criterio [not null]
}

Table Prefeitura {
  id Int [pk, increment]
  nome String [not null]
  usuarioId Int [unique, not null]
  usuario Usuario [not null]
  apoios Apoio [not null]
}

Table Apoio {
  id Int [pk, increment]
  data DateTime [not null]
  valor Float [not null]
  tipoAjuda String [not null]
  documentacao String [not null]
  empresaId Int [not null]
  ongId Int [not null]
  prefeituraId Int
  empresa Empresa [not null]
  ong ONG [not null]
  prefeitura Prefeitura
}

Table Criterio {
  id Int [pk, increment]
  tipo String [not null]
  pontuacao Int [not null]
  empresaId Int [not null]
  seloId Int [not null]
  empresa Empresa [not null]
  selo Selo [not null]
}

Table Selo {
  id Int [pk, increment]
  tipo String [not null]
  tier String [not null]
  criterios Criterio [not null]
}

Table File {
  id String [pk]
  storedName String [not null]
  mimetype String [not null]
  size Int [not null]
  path String [not null]
  status String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Ref: ONG.usuarioId - Usuario.id

Ref: Empresa.usuarioId - Usuario.id

Ref: Prefeitura.usuarioId - Usuario.id

Ref: Apoio.empresaId > Empresa.id

Ref: Apoio.ongId > ONG.id

Ref: Apoio.prefeituraId > Prefeitura.id

Ref: Criterio.empresaId > Empresa.id

Ref: Criterio.seloId > Selo.id